--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -3,6 +3,8 @@ apply plugin: 'java-library'
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.google.auto.service:auto-service:1.0-rc3'
+    implementation 'com.squareup:javapoet:1.9.0'
+    implementation project(':annotation')
 }
 
 sourceCompatibility = "1.7"
