--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -2,9 +2,11 @@ apply plugin: 'java-library'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(':annotation')
     implementation 'com.google.auto.service:auto-service:1.0-rc3'
     implementation 'com.squareup:javapoet:1.9.0'
-    implementation project(':annotation')
+    implementation 'junit:junit:4.12'
+    testImplementation 'com.google.testing.compile:compile-testing:0.8'
 }
 
 sourceCompatibility = "1.7"
